# NPS-Crawling

./: .gitignore  LICENSE  README.md  conftest.py  main.py  preprocessing_evaluation.txt  pyproject.toml  requirements.txt  scrapy.cfg  test.py  tox.ini
.github/workflows/: python-package.yml  test-report.yml
classification/: utils.py
classification/data_processing/: preprocess_data.py
classification/model/: classification_model.py
config/: config.py
crawler/: items.py  settings.py
crawler/pipelines/: cleaning.py  filtering.py  storage.py  utils.py
crawler/spiders/: sec_filings_spider.py
docker/database/: docker-compose.yml
docker/llm/: README.md  docker-compose.gpu.yml  docker-compose.yml
gui/: app.js  app.py  app_test.py  check.html  check.js  classification.html  database.html  index.html  preprocessing.html  results.html
gui/middleware/: auth.py
gui/routes/: classification_routes.py  config_routes.py  crawl_routes.py  db_routes.py  preprocessing_routes.py  query_routes.py  results_routes.py  static_routes.py
gui/services/: classification_service.py  config_service.py  crawl_service.py  db_service.py  preprocessing_service.py  query_service.py  (+1 more)
gui_query/: net-promoter-score-query.json  net-promotor-score-query.json  nps-query.json
preprocessing/: inspect_parquet.py  json_to_parquet.py  run.py
projects/: nps_project.json  test_project.json
query/: a0aeed44-8acb-45af-a87a-5f54d571e0a8.json
scripts/: compare_filings.py  copy_manual_mapping_jsons.py  count_keyword_in_raw.py  db_tests.py  eval_evaluate.py  eval_export_for_labeling.py  eval_score_contexts.py  export_context_window_samples.py  export_csv.py  export_excel.py  export_metadata_csv.py  export_xlsx.py  get_null_filings_by_keyword.py  select_top_bottom_filings.py  show_dB.py
src/: config.py
tests/: smoke_test_query_completeness.py  smoke_test_sec_query.py  test_category_serialization.py  test_classification_config_basename.py  test_classification_mock.py  test_config_json_loading.py  test_db_export.py  test_llm.py  test_main.py  test_project_config.py  test_project_manager.py
train/: BGE-CLI.ipynb  Category-Generation.ipynb  Classification_Test.ipynb  Mapping_Manuell_V2_Ellena.csv  Model-Evaluation.ipynb  NPS-SVM.ipynb  Server-Classification.ipynb  few_shot_examples.csv  generate_project_config_tree.py  ground_truth_final.csv  ground_truth_final.xlsx  ground_truth_final_without_examples.csv  regenerate_category_configs.py  visualize_model_evaluations.py  visualize_paper_evaluation.py
tui/: app.py  app.tcss  constants.py  model.py
(+234 files in other folders)
